<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".view.fragment.LoginFragment">

        <ImageView
            android:id="@+id/iv_login_dogapp_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login_dogapp_image"
            android:src="@mipmap/login_dog"
            app:layout_constraintBottom_toTopOf="@+id/iv_login_fingerprint_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/tv_login_dogapp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_login_dogapp_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/iv_login_fingerprint_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/login_fingerprint_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_dogapp_image"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/fingerprint_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>