<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.dogapp.view.fragment.LoginFragment"
        android:label="Home Fragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_Login_to_HomeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.dogapp.view.fragment.HomeFragment"
        android:label="Home Fragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_CreateFragment"
            app:destination="@id/CreateFragment" />
        <action
            android:id="@+id/action_homeFragment_to_DetailsFragment"
            app:destination="@id/DetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/CreateFragment"
        android:name="com.example.dogapp.view.fragment.CreateFragment"
        android:label="@string/create_fragment_label"
        tools:layout="@layout/fragment_create">
        <action
            android:id="@+id/action_CreateFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/DetailsFragment"
        android:name="com.example.dogapp.view.fragment.DetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_details">
        <action
            android:id="@+id/action_DetailsFragment_to_EditFragment"
            app:destination="@id/EditFragment" />
        <action
            android:id="@+id/action_DetailsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditFragment"
        android:name="com.example.dogapp.view.fragment.EditFragment"
        android:label="@string/edit_fragment_label"
        tools:layout="@layout/fragment_edit">
        <action
            android:id="@+id/action_EditFragment_to_HomeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>